--- a/etl_pipelines/openweather_air_quality/Dockerfile
+++ b/etl_pipelines/openweather_air_quality/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim as build
+FROM python:alpine as build
 
 COPY ./etl_library ./etl_library
 COPY ./openweather_library ./openweather_library
