--- a/etl_pipelines/alpha_vantage_bonds/Dockerfile
+++ b/etl_pipelines/alpha_vantage_bonds/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim as build
+FROM python:alpine as build
 
 COPY ./etl_library ./etl_library
 COPY ./alpha_vantage_library ./alpha_vantage_library
