--- a/etl_pipelines_nodejs/finnhub_nodejs/package.json
+++ b/etl_pipelines_nodejs/finnhub_nodejs/package.json
@@ -15,6 +15,7 @@
   "author": "Markham Lee",
   "license": "MIT",
   "devDependencies": {
+    "follow-redirects": ">=1.15.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.21",
@@ -27,6 +28,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "follow-redirects": ">=1.15.6",
     "@influxdata/influxdb-client": "^1.33.2",
     "ajv": "^8.12.0",
     "axios": "^1.6.7",
