--- a/etl_pipelines_nodejs/github_node/package.json
+++ b/etl_pipelines_nodejs/github_node/package.json
@@ -14,6 +14,7 @@
   "author": "Markham Lee",
   "license": "MIT",
   "devDependencies": {
+    "follow-redirects": ">=1.15.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.21",
@@ -26,6 +27,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "follow-redirects": ">=1.15.6",
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.6.7",
     "octokit": "^3.1.2",
