--- a/requirements.txt
+++ b/requirements.txt
@@ -157,7 +157,7 @@ PyYAML==6.0.1
 pyzmq
 reactivex==4.0.4
 referencing==0.30.2
-requests==2.31.0
+requests
 requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
