Update reqs for security issue, updating Asan ETL variable names to be more consistent with other ETLs

--- a/argo_workflow_manifests/etl_pipelines/asana/asana_task_data.yaml
+++ b/argo_workflow_manifests/etl_pipelines/asana/asana_task_data.yaml
@@ -57,7 +57,7 @@ spec:
               configMapKeyRef:
                 key: POSTGRES_DB_HOST
                 name: asana-etl-variables
-          - name: PORT
+          - name: POSTGRES_PORT
             valueFrom:
               configMapKeyRef:
                 key: POSTGRES_PORT
