--- a/etl_pipelines_nodejs/finnhub_nodejs/package.json
+++ b/etl_pipelines_nodejs/finnhub_nodejs/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.19.21",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "axios": "^1.8.2",
     "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
