--- a/requirements.txt
+++ b/requirements.txt
@@ -135,7 +135,7 @@ pluggy==1.3.0
 prison==0.2.1
 prometheus-client 
 prompt-toolkit 
-protobuf==4.24.4
+protobuf>=4.25
 psutil
 ptyprocess
 pure-eval 
@@ -185,7 +185,7 @@ traitlets
 typing_extensions 
 uc-micro-py==1.0.2
 unicodecsv==0.14.1
-urllib3==2.2.2
+urllib3>=2.5.0
 wcwidth 
 webencodings==0.5.1
 websocket-client
